# transformer-practice

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  attention.py  decoder.py  embeddings.py  encoder.py  modules.py  pyproject.toml  requirements.txt  serve.py  simple_train.py  test_transformer.py  transformer.py
